* Release 0.2.0
	* Fixed issue #31:  Make "python -m cpuinfo" possible
	* Fixed issue #5: Importing is different depending on install method

12/16/2015 Release 0.1.8
	* New release to get around the brokenness of pypi

12/16/2015 Release 0.1.7
	* Fixed Bug #23: CPUID failure segfaults Python
	* Fixed Bug #16: Make it work on Raspberry Pi
	* FIxed Bug #27: System exit called if CPU is not supported

07/07/2015 Release 0.1.6
	* Fixed Bug #25: dmesg is missing extra Features in flags
	* Fixed Bug #19: Add a test suite
	* Fixed Bug #24: CPUID breaks on brands with many NULL terminators

06/14/2015 Release 0.1.5
	* Fixed Bug #17: Make a script for easy gathering of CPU info
	* Fixed Bug #21: Getting CPU info from dmesg fails on Linux but not BSD
	* Fixed Bug #20: Subprocess stderr is sometimes printed to console
	* Fixed Bug #15: Make it work on a BeagleBone
	* Fixed Bug #10: Stepping parse TypeError on ARM

02/11/2015 Release 0.1.4
	* New release to get around the brokenness of pypi

02/11/2015 Release 0.1.3
	* Fixed Bug #11: Support cpu strings that do not have @ in them
	* Fixed Bug #13: Support cpu strings that do not have Hz in them

09/30/2014 Release 0.1.2
	* Added support for installing to binary path.
	* Fixed issue with crashing in python 3.

09/23/2014 Release 0.1.1
	* Fixed Bug #3: It is not obvious if Hz Raw is the current Hz, or the advertised Hz
	* Fixed Bug #2: Wrong CPU frequency in get_cpu_info_from_proc_cpuinfo()