@@ -1,2 +1,2 @@
-include README.rst ChangeLog LICENSE
+include README.rst ChangeLog LICENSE tests/* test_suite.py
 
