@@ -1,4 +1,5 @@
 * Release 0.2.0
+	* Fixed Bug #32: Please ship tests to pypi
 	* Fixed issue #31:  Make "python -m cpuinfo" possible
 	* Fixed issue #5: Importing is different depending on install method
 
